--- a/index.html
+++ b/index.html
@@ -38,34 +38,63 @@
                     <div class="app-icons">
                         <a href="index.html" class="app-icon">
                             <img src="images/main+.jpg" class="icon-img">
+                            <p>Main</p>
                         </a>
                         <a href="bot.html" class="app-icon">
                             <img src="images/bot.jpg" class="icon-img">
-                        </a>
-                        <a href="line.html" class="app-icon">
-                            <img src="images/line.jpg" class="icon-img">
+                            <p>Bot</p>
                         </a>
                     </div>
-                    <br>
                     <h2>HOME</h2>
                     <div class="app-icons">
                         <a href="about.html" class="app-icon">
                             <img src="images/icon.png" class="icon-img">
+                            <p>About</p>
                         </a>
                         <a href="rule.html" class="app-icon">
                             <img src="images/rule.jpg" class="icon-img">
+                            <p>Rule</p>
                         </a>
                         <a href="url.html" class="app-icon">
                             <img src="images/ser.jpg" class="icon-img">
+                            <p>SER.</p>
                         </a>
                         <a href="py.html" class="app-icon">
                             <img src="images/py.jpg" class="icon-img">
+                            <p>Privacy Policy</p>
+                        </a>
+                    </div>
+                    <br>
+                    <h2>関連オープンチャット</h2>
+                    <div class="app-icons">
+                        <a href="https://line.me/ti/g2/hYh_EC9qI3Nh5YDbw1jow16gxWHvsXBqzO7JKQ" class="app-icon">
+                            <img src="images/main.jpg" class="icon-img">
+                            <p>広場</p>
+                        </a>
+                        <a href="https://line.me/ti/g2/1_pyDh-u-G_NZ1VROcXnLDSInde6x0op6x1O2Q" class="app-icon">
+                            <img src="images/home2.jpg" class="icon-img">
+                            <p>第二広場</p>
+                        </a>
+                        <a href="https://line.me/ti/g2/0dkHAnBpxdoB-XkOSvi33juDcivteeT9FPlrHQ" class="app-icon">
+                            <img src="images/game.jpg" class="icon-img">
+                            <p>ゲーム部屋</p>
+                        </a>
+                        <a href="https://line.me/ti/g2/EOzK0n0ImrZtZV1Up141UW1ryms1_0B4m_qfBw" class="app-icon">
+                            <img src="images/sub.jpg" class="icon-img">
+                            <p>避難場所</p>
+                        </a>
+                        <a href="https://line.me/ti/g2/EOzK0n0ImrZtZV1Up141UW1ryms1_0B4m_qfBw" class="app-icon">
+                            <img src="images/senden.jpg" class="icon-img">
+                            <p>宣伝</p>
                         </a>
                     </div>
                     <br>
                     <div class="dev">
                         <h2>&lt;Developer&gt;</h2>
                         <pre id="output">Loading...</pre>
+                        <a href="line.html" class="app-icon">
+                            <p>Line_URL_Scheme</p>
+                        </a>
                     </div>
                 </div>
                 <br>
@@ -74,7 +103,7 @@
                     <br>
                     <a href="https://line.me/R/msg/text/%E9%9B%91%E8%AB%87%E3%82%AA%E3%83%BC%E3%83%97%E3%83%B3%E3%83%81%E3%83%A3%E3%83%83%E3%83%88%E3%81%AB%E6%8B%9B%E5%BE%85%E3%81%95%E3%82%8C%E3%81%BE%E3%81%97%E3%81%9F%E3%80%82%0D%0Ahttps%3A%2F%2Fopenmura.github.io%2Finvitation"><h3>招待する</h3></a>
                     <br>
-                    <p>Version : 26.1.6</p>
+                    <p>Version : 26.1.7</p>
                     <p>Last-Updated : 2025/04/05 13:21:06 JST</p>
                     <p>copyright 2025 openmura_system_dev</p>
                 </div>
