--- a/url.html
+++ b/url.html
@@ -39,19 +39,19 @@
             <section class="page" style="background-image: url('images/main.jpg');">
                 <div class="overlay">
                     <h2>広場</h2>
-                    <p><a href="https://openchat.line.me/jp/cover/wISYS0DV8S1cg8_tv4phL0cxHoLD-vBIAE6prxM_hVSH6I3nOj5znlNdTeM">参加する！！</a></p>
+                    <p><a href="https://line.me/ti/g2/hYh_EC9qI3Nh5YDbw1jow16gxWHvsXBqzO7JKQ">参加する！！</a></p>
                 </div>
             </section>
             <section class="page" style="background-image: url('images/sub.jpg');">
                 <div class="overlay">
                     <h2>避難場所</h2>
-                    <p><a href="https://line.me/ti/g2/3UhTUUZGFKrN3VNHZbit9z1aFCwv_v4ODn5-tw?utm_source=invitation&utm_medium=link_copy&utm_campaign=default">参加する！！</a></p>
+                    <p><a href="https://line.me/ti/g2/3UhTUUZGFKrN3VNHZbit9z1aFCwv_v4ODn5-tw">参加する！！</a></p>
                 </div>
             </section>
             <section class="page" style="background-image: url('images/senden.jpg');">
                 <div class="overlay">
                     <h2>宣伝</h2>
-                    <p><a href="https://line.me/ti/g2/EOzK0n0ImrZtZV1Up141UW1ryms1_0B4m_qfBw?utm_source=invitation&utm_medium=link_copy&utm_campaign=default">参加する！！</a></p>
+                    <p><a href="https://line.me/ti/g2/EOzK0n0ImrZtZV1Up141UW1ryms1_0B4m_qfBw">参加する！！</a></p>
                 </div>
             </section>
         </main>
